--- a/Test/packages.config
+++ b/Test/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="ConcurrentSet" version="1.0.0" targetFramework="net46" />
   <package id="log4net" version="2.0.8" targetFramework="net46" />
+  <package id="SFML-Portable-2.4" version="1.5.1" targetFramework="net46" />
 </packages>
