--- a/Raven Game Framework/packages.config
+++ b/Raven Game Framework/packages.config
@@ -3,6 +3,7 @@
   <package id="BouncyCastle" version="1.8.2" targetFramework="net46" />
   <package id="ConcurrentSet" version="1.0.0" targetFramework="net46" />
   <package id="FarseerPhysics" version="3.5.0" targetFramework="net46" />
+  <package id="Iesi.Collections" version="4.0.4" targetFramework="net46" />
   <package id="log4net" version="2.0.8" targetFramework="net46" />
   <package id="NAudio" version="1.8.4" targetFramework="net46" />
   <package id="NAudio.Vorbis" version="1.0.0.0" targetFramework="net46" />
