--- a/Raven Game Framework/Raven Game Framework.csproj
+++ b/Raven Game Framework/Raven Game Framework.csproj
@@ -120,6 +120,9 @@
     <Compile Include="Audio\Core\LoggingAudio.cs" />
     <Compile Include="Core\AffinityThread.cs" />
     <Compile Include="Core\CopyOnWriteList.cs" />
+    <Compile Include="Geom\Noise\INoise.cs" />
+    <Compile Include="Geom\Noise\PerlinNoise.cs" />
+    <Compile Include="Geom\Noise\SimplexNoise.cs" />
     <Compile Include="Core\UpdateDeltaLoop.cs" />
     <Compile Include="Display\Core\Skew.cs" />
     <Compile Include="Display\DisplayObject.cs" />
@@ -163,6 +166,8 @@
     <Compile Include="Patterns\ServiceLocator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\MathUtil.cs" />
+    <Compile Include="Utils\PerlinUtil.cs" />
+    <Compile Include="Utils\SimplexUtil.cs" />
     <Compile Include="Utils\ThreadUtil.cs" />
   </ItemGroup>
   <ItemGroup>
